--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ Flask==3.0.3
 Flask-Cors==4.0.0
 flatbuffers==24.3.25
 gotrue==2.4.2
+gunicorn==22.0.0
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
