--- a/.github/workflows/main_serif-confessions.yml
+++ b/.github/workflows/main_serif-confessions.yml
@@ -14,9 +14,12 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+      
     steps:
       - uses: actions/checkout@v4
-
+      - uses: actions/setup-go@v5
+        with:
+          go-version: '^1.22.2'
       - name: Set up Python version
         uses: actions/setup-python@v1
         with:
@@ -30,7 +33,9 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt; python -m nltk.downloader punkt stopwords reuters averaged_perceptron_tagger
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
-
+      - name: Compile Go package
+        run: cd src/ascii_image_generator; go build -buildmode=c-shared -o ../libraries/ascii_image_generator.so main.go 
+        
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
 
