--- a/.github/workflows/main_serif-confessions.yml
+++ b/.github/workflows/main_serif-confessions.yml
@@ -34,7 +34,7 @@ jobs:
         run: pip install -r requirements.txt; python -m nltk.downloader punkt stopwords reuters averaged_perceptron_tagger
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       - name: Compile Go package
-        run: cd src/ascii_image_generator; go build -buildmode=c-shared -o ../libraries/ascii_image_generator.so main.go 
+        run: cd src/ascii_image_generator; CGO_ENABLED=0 go build -buildmode=c-shared -o ../libraries/ascii_image_converter.so main.go 
         
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
