--- a/.github/workflows/main_serif-confessions.yml
+++ b/.github/workflows/main_serif-confessions.yml
@@ -3,8 +3,10 @@ name: Linux Container Node Workflow
 on: [push]
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
+    environment:
+      name: 'production'
 
     steps:
     - uses: actions/checkout@v2
@@ -17,9 +19,11 @@ jobs:
 
     - run: |
         docker build . -t text2ascii.azurecr.io/text2ascii:${{ github.sha }}
-        docker push text2ascii.azurecr.io/text2ascii:${{ github.sha }}     
+        docker push text2ascii.azurecr.io/text2ascii:${{ github.sha }}    
 
-    - uses: azure/webapps-deploy@v2
+    - name: Deploy to Azure Web App
+      id: deploy-to-webapp
+      uses: azure/webapps-deploy@v2
       with:
         app-name: 'text2ascii'
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
